Small adjust on main page

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -13,7 +13,7 @@
                 <span class="input-group-btn">
                     <a href="students/new" class="btn btn-primary">Novo aluno</a>
                 </span>
-                <input ng-model="filter" ng-model-options="{debounce: 100}" class="form-control" placeholder="Digite o nome do aluno" />
+                <input ng-model="filter" ng-model-options="{debounce: 100}" class="form-control" placeholder="Digite o nome do aluno para pesquisa-lo abaixo" />
             </div>
         </form>
     </div><!-- fim col-md-12 -->
